refactor(ourdim): fix sonarqube issues