@@ -34,7 +34,7 @@ class OurDimTest {
     void testEquals(){
         OurDim shape = new OurDim(2, 3);
         assertFalse(shape.equals(null));
-        assertFalse(shape.equals(new Float(3)));
+        assertFalse(shape.equals(Float.valueOf(3)));
         assertTrue(shape.equals(shape));
         OurDim other = new OurDim(1, 3);
         assertFalse(shape.equals(other));
